--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,14 @@ spring.jpa.show-sql=true
 # Optional: Logging SQL Queries
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+# SMTP server ????? ??? ??? ???
+spring.mail.host =  smtp-relay.brevo.com
+spring.mail.port = 587
+spring.mail.username = a08396001@smtp-brevo.com
+spring.mail.password = bskjTdn9qSLp6EC
+
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.starttls.enable = true
+spring.mail.properties.mail.starttls.required = true
